@@ -17,6 +17,7 @@ v7.13.0
 
 v7.12.2
   - Revert: Runner without tag should pick builds without tag only
+  - Encrypt variables
 
 v7.12.1
   - Runner without tag should pick builds without tag only
